# config-debug-env

./: .dockerignore  README.md  __init__.py  client.py  inference.py  openenv.yaml  pyproject.toml  test_env.py  test_grader_audit.py  test_k8s_multistep.py  test_nginx_multistep.py  test_task_graders.py  test_validator_simulation.py  verify_graders.py
server/: Dockerfile  app.py  config_debug_environment.py  env.py  models.py  requirements.txt
server/graders/: compose_grader.py  dockerfile_grader.py  github_actions_grader.py  grader_api.py  json_grader.py  k8s_grader.py  nginx_grader.py  yaml_grader.py
server/tasks/: task1_json.py  task2_yaml.py  task3_dockerfile.py  task4_compose.py  task5_k8s.py  task6_github_actions.py  task7_nginx.py  task_registry.py
